crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/unknownfile.usdz
version https://git-lfs.github.com/spec/v1
oid sha256:9b44b659cf094f0cd2c12be55d3bbe0ab8d9143c902d656766774ffe19828a3a
size 357
